[package]
name = "stopwatch"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.7"
hd44780-driver = "0.4.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
num-integer = { version = "0.1.46", default-features = false }
rtic-sync = "1.3.0"
rtt-target = "0.5.0"
systick-monotonic = "1.0.1"
time = { version = "0.3.36", default-features = false }

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

[dependencies.panic-probe]
version = "0.3.2"
features = ["print-rtt"]

[dependencies.rtic]
version = "2.1.1"
features = ["thumbv7-backend"]

[dependencies.stm32f4xx-hal]
version = "0.21.0"
features = ["stm32f446"]

[[bin]]
name = "stopwatch"
test = false
bench = false
